@@ -140,6 +140,7 @@ Version 7.4  [ (to be announced) ]
             - New routines overForComponent() and underForComponent().
             - New variant of reverse() to reverse just one component of a
               multiple-component link.
+            - New routine componentsByStrand().
             - Extended knotSig() to work with connected link diagrams with any
               number of link components, and added an alias sig() for knotSig().
             - Routine hasReducingPass() can now handle multiple-component links.
